Updated Spanish translation

--- a/help/es/es.po
+++ b/help/es/es.po
@@ -2,22 +2,20 @@
 # Spanish translation for gnome-color-manager.
 # Copyright (C) 2009 gnome-color-manager's COPYRIGHT HOLDER
 # This file is distributed under the same license as the gnome-color-manager package.
-#
-# Jorge González González <aloriel@gmail.com>, 2009.
-# Jorge González <jorgegonz@svn.gnome.org>, 2009.
+# Jorge González <jorgegonz@svn.gnome.org>, 2009, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager.help.master\n"
-"POT-Creation-Date: 2009-12-20 12:28+0000\n"
-"PO-Revision-Date: 2009-12-30 14:54+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2010-02-05 14:25+0000\n"
+"PO-Revision-Date: 2010-02-16 18:49+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: KBabel 1.11.4\n"
-"Report-Msgid-Bugs-To: \n"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
@@ -29,19 +27,33 @@ msgstr ""
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:201(None)
-msgid "@@image: 'figures/gcm-basic.png'; md5=86cc59ab472d11efc5e46b1cd15d5681"
-msgstr "@@image: 'figures/gcm-basic.png'; md5=86cc59ab472d11efc5e46b1cd15d5681"
+#| msgid ""
+#| "@@image: 'figures/gcm-basic.png'; md5=86cc59ab472d11efc5e46b1cd15d5681"
+msgid "@@image: 'figures/gcm-basic.png'; md5=2341688974dc94a026330d66e2d2b193"
+msgstr "@@image: 'figures/gcm-basic.png'; md5=2341688974dc94a026330d66e2d2b193"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:215(None)
-msgid "@@image: 'figures/gcm-adjust.png'; md5=441e4579c56418fca68b02508004f3d5"
+#| msgid ""
+#| "@@image: 'figures/gcm-adjust.png'; md5=441e4579c56418fca68b02508004f3d5"
+msgid "@@image: 'figures/gcm-adjust.png'; md5=5cde9fc4e9d23b4b753ba5afceb12114"
 msgstr ""
-"@@image: 'figures/gcm-adjust.png'; md5=441e4579c56418fca68b02508004f3d5"
+"@@image: 'figures/gcm-adjust.png'; md5=5cde9fc4e9d23b4b753ba5afceb12114"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
-#: C/gnome-color-manager.xml:239(None)
+#: C/gnome-color-manager.xml:232(None)
+#| msgid ""
+#| "@@image: 'figures/gcm-basic.png'; md5=86cc59ab472d11efc5e46b1cd15d5681"
+msgid ""
+"@@image: 'figures/gcm-scanner.png'; md5=7b634191ede46f7b7c7af2f987270c49"
+msgstr ""
+"@@image: 'figures/gcm-scanner.png'; md5=7b634191ede46f7b7c7af2f987270c49"
+
+#. When image changes, this message will be marked fuzzy or untranslated for you.
+#. It doesn't matter what you translate it to: it's not used at all.
+#: C/gnome-color-manager.xml:256(None)
 msgid ""
 "@@image: 'figures/gcm-calibrate-default.png'; "
 "md5=21815551aae222d703032db710598b70"
@@ -51,7 +63,7 @@ msgstr ""
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
-#: C/gnome-color-manager.xml:251(None)
+#: C/gnome-color-manager.xml:268(None)
 msgid ""
 "@@image: 'figures/gcm-calibrate-drawing.png'; "
 "md5=8fcee7383b49c1d2fd487f5e9b6beb25"
@@ -69,6 +81,9 @@ msgid ""
 "makes it easy to manage, install and generate color profiles in the GNOME "
 "desktop."
 msgstr ""
+"El <application>Gestor de color de GNOME</application> es un programa de "
+"sesión que hace posible gestionar, instalar y generar perfiles de color en "
+"el Escritorio GNOME."
 
 #: C/gnome-color-manager.xml:33(year)
 msgid "2009"
@@ -293,6 +308,7 @@ msgstr ""
 msgid ""
 "The install button will not show if the profile has been already installed."
 msgstr ""
+"El botón de instalación no se mostrará si el perfil ya se ha instalado."
 
 #: C/gnome-color-manager.xml:177(title)
 msgid "Preferences"
@@ -308,7 +324,7 @@ msgstr "El perfil del monitor."
 
 #: C/gnome-color-manager.xml:188(para)
 msgid "The gamma, brightness and contrast."
-msgstr ""
+msgstr "La gamma, el brillo y el contraste."
 
 #: C/gnome-color-manager.xml:195(title)
 msgid "Basic Preferences"
@@ -331,28 +347,41 @@ msgid "This allows you to adjust a calibrated or generated profile."
 msgstr ""
 
 #: C/gnome-color-manager.xml:226(title)
+msgid "Profile viewer"
+msgstr ""
+
+#: C/gnome-color-manager.xml:228(title)
+#| msgid "GNOME Color Manager basic tab"
+msgid "GNOME Color Manager profiles tab"
+msgstr "Solapa de perfiles del Gestor de color de GNOME"
+
+#: C/gnome-color-manager.xml:237(para)
+msgid "This allows you to view details about installed profiles."
+msgstr "Esto le permite ver los detalles acerca de los perfiles instalados."
+
+#: C/gnome-color-manager.xml:243(title)
 msgid "Calibration"
 msgstr "Calibración"
 
-#: C/gnome-color-manager.xml:227(para)
+#: C/gnome-color-manager.xml:244(para)
 msgid ""
 "<application>GNOME Color Manager</application> can generate ICC profiles "
 "with supported hardware colorimeter devices."
 msgstr ""
 
-#: C/gnome-color-manager.xml:233(title)
+#: C/gnome-color-manager.xml:250(title)
 msgid "The first stage of calibration, which takes a few minutes."
 msgstr ""
 
-#: C/gnome-color-manager.xml:245(title)
+#: C/gnome-color-manager.xml:262(title)
 msgid "The final stage of calibration, which can take over 15 minutes."
-msgstr ""
+msgstr "La parte final del calibrado, que puede llevar más de 15 minutos."
 
-#: C/gnome-color-manager.xml:260(title)
+#: C/gnome-color-manager.xml:277(title)
 msgid "About"
 msgstr "Acerca de"
 
-#: C/gnome-color-manager.xml:261(para)
+#: C/gnome-color-manager.xml:278(para)
 msgid ""
 "GNOME Color Manager was written by Richard Hughes <email>richard@hughsie."
 "com</email>. To find more information about GNOME Color Manager, please "
@@ -360,7 +389,7 @@ msgid ""
 "\"http\"><application>GNOME Color Manager</application> web page</ulink>."
 msgstr ""
 
-#: C/gnome-color-manager.xml:267(para)
+#: C/gnome-color-manager.xml:284(para)
 msgid ""
 "To report a bug or make a suggestion regarding this application or this "
 "manual, follow the directions at the <ulink url=\"http://projects.gnome.org/"
@@ -368,7 +397,7 @@ msgid ""
 "Manager</application> Bug Page</ulink>."
 msgstr ""
 
-#: C/gnome-color-manager.xml:273(para)
+#: C/gnome-color-manager.xml:290(para)
 msgid ""
 "This program is distributed under the terms of the GNU General Public "
 "license as published by the Free Software Foundation; either version 2 of "
@@ -381,4 +410,4 @@ msgstr ""
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
 #: C/gnome-color-manager.xml:0(None)
 msgid "translator-credits"
-msgstr "Jorge González <jorgegonz@svn.gnome.org>, 2009"
+msgstr "Jorge González <jorgegonz@svn.gnome.org>, 2009-2010"
