Updated Spanish translation

--- a/help/es/es.po
+++ b/help/es/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager.help.master\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-02-05 14:25+0000\n"
-"PO-Revision-Date: 2010-02-16 18:49+0100\n"
+"PO-Revision-Date: 2010-02-18 13:01+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -240,6 +240,11 @@ msgid ""
 "projects.gnome.org/gnome-color-manager/bugs.html\" type=\"http"
 "\"><application>GNOME Color Manager</application> Contact Page</ulink>."
 msgstr ""
+"Para informar de un fallo, o hacer alguna sugerencia concerniente a Gestor "
+"de color de GNOME o este manual, siga las indicaciones en la <ulink url="
+"\"http://projects.gnome.org/gnome-color-manager/bugs.html\" type=\"http"
+"\">página de contacto del <application>Gestor de color de GNOME</"
+"application></ulink>."
 
 #: C/gnome-color-manager.xml:0(application)
 msgid "GNOME Color Manager"
@@ -264,6 +269,9 @@ msgid ""
 "install and generate color profiles in the <systemitem>GNOME desktop</"
 "systemitem>."
 msgstr ""
+"El Gestor de color de GNOME es un entorno de trabajo de sesión que facilita "
+"la gestión, instalación y generación de perfiles de color en el "
+"<systemitem>Escritorio GNOME</systemitem>."
 
 #: C/gnome-color-manager.xml:131(title)
 msgid "Usage"
@@ -275,6 +283,9 @@ msgid ""
 "startup, but you can manually start <application>GNOME Color Manager</"
 "application> by doing:"
 msgstr ""
+"El <application>Gestor de color de GNOME</application> generalmente se "
+"inicia durante el arranque de GNOME pero puede iniciar manualmente el "
+"<application>Gestor de color de GNOME</application> ejecutando:"
 
 #: C/gnome-color-manager.xml:138(term)
 msgid "Command line"
@@ -285,16 +296,20 @@ msgid ""
 "Type <command>gcm-apply --verbose</command>, then press <keycap>Return</"
 "keycap>:"
 msgstr ""
+"Escriba <command>gcm-apply --verbose</command>, después pulse <keycap>Intro</"
+"keycap>:"
 
 #: C/gnome-color-manager.xml:150(title)
 msgid "Importing profiles"
-msgstr ""
+msgstr "Importar perfiles"
 
 #: C/gnome-color-manager.xml:151(para)
 msgid ""
 "<application>GNOME Color Manager</application> installs a program to install "
 "profiles by simply double clicking on them."
 msgstr ""
+"El <application>Gestor de color de GNOME</application> instalar un programa "
+"para instalar perfiles simplemente pulsando dos veces sobre ellos."
 
 #: C/gnome-color-manager.xml:157(title)
 msgid "Import a ICC profile"
@@ -303,6 +318,8 @@ msgstr "Importar un perfil ICC"
 #: C/gnome-color-manager.xml:159(title)
 msgid "GNOME Color Manager dialog after double clicking a ICC or ICM file"
 msgstr ""
+"El diálogo del Gestor de color de GNOME después de pulsar dos veces sobre un "
+"archivo ICC o ICM"
 
 #: C/gnome-color-manager.xml:169(para)
 msgid ""
@@ -340,15 +357,15 @@ msgstr "Preferencias avanzadas"
 
 #: C/gnome-color-manager.xml:211(title)
 msgid "GNOME Color Manager advanced tab"
-msgstr ""
+msgstr "Solapa avanzada del Gestor de color de GNOME"
 
 #: C/gnome-color-manager.xml:220(para)
 msgid "This allows you to adjust a calibrated or generated profile."
-msgstr ""
+msgstr "Le permite ajustar un perfil calibrado o  generado."
 
 #: C/gnome-color-manager.xml:226(title)
 msgid "Profile viewer"
-msgstr ""
+msgstr "Visor de perfiles"
 
 #: C/gnome-color-manager.xml:228(title)
 #| msgid "GNOME Color Manager basic tab"
@@ -368,10 +385,12 @@ msgid ""
 "<application>GNOME Color Manager</application> can generate ICC profiles "
 "with supported hardware colorimeter devices."
 msgstr ""
+"El <application>Gestor de color de GNOME</application> puede generar "
+"perfiles ICC con dispositivos hardware de colorímetros soportados."
 
 #: C/gnome-color-manager.xml:250(title)
 msgid "The first stage of calibration, which takes a few minutes."
-msgstr ""
+msgstr "La primera etapa del calibrado, que lleva unos pocos minutos."
 
 #: C/gnome-color-manager.xml:262(title)
 msgid "The final stage of calibration, which can take over 15 minutes."
@@ -388,6 +407,11 @@ msgid ""
 "visit the <ulink url=\"http://projects.gnome.org/gnome-color-manager/\" type="
 "\"http\"><application>GNOME Color Manager</application> web page</ulink>."
 msgstr ""
+"Richard Hughes <email>richard@hughsie.com</email> escribió el Gestor de "
+"color de GNOME. Para obtener más información acerca del Gestor de color de "
+"GNOME visite la <ulink url=\"http://projects.gnome.org/gnome-color-manager/"
+"\" type=\"http\">página web del <application>Gestor de color de GNOME</"
+"application></ulink>."
 
 #: C/gnome-color-manager.xml:284(para)
 msgid ""
@@ -396,6 +420,10 @@ msgid ""
 "gnome-color-manager/bugs.html\" type=\"http\"><application>GNOME Color "
 "Manager</application> Bug Page</ulink>."
 msgstr ""
+"Para informar de un fallo o hacer alguna sugerencia concerniente a esta "
+"aplicación o este manual, siga las indicaciones en la <ulink url=\"http://"
+"projects.gnome.org/gnome-color-manager/bugs.html\" type=\"http\">página de "
+"errores del <application>Gestor de color de GNOME</application></ulink>."
 
 #: C/gnome-color-manager.xml:290(para)
 msgid ""
@@ -406,6 +434,12 @@ msgid ""
 "\">link</ulink>, or in the file COPYING included with the source code of "
 "this program."
 msgstr ""
+"Este programa se distribuye bajo los términos de la Licencia Pública General "
+"GNU tal como la publica la Free Software Foundation; tanto en la versión 2 "
+"de la Licencia, o (a su opción) cualquier otra versión posterior. Puede "
+"encontrarse una copia de esta licencia en este <ulink url=\"gnome-color-"
+"manager:gpl\" type=\"help\">enlace</ulink> o en el archivo COPYING incluido "
+"con el código fuente de este programa."
 
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
 #: C/gnome-color-manager.xml:0(None)
