Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
 "POT-Creation-Date: 2010-02-18 10:53+0000\n"
-"PO-Revision-Date: 2010-02-18 14:26+0100\n"
+"PO-Revision-Date: 2010-02-18 14:33+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -478,10 +478,9 @@ msgstr "Archivos de imagen soportados"
 #. TRANSLATORS: filter name on the file->open dialog
 #: ../src/gcm-calibrate.c:612 ../src/gcm-calibrate.c:664
 #: ../src/gcm-prefs.c:491
-#, fuzzy
 #| msgid "Color Profiles"
 msgid "All files"
-msgstr "Perfiles de color"
+msgstr "Todos los archivos"
 
 #. TRANSLATORS: dialog for file->open dialog
 #: ../src/gcm-calibrate.c:637
@@ -511,12 +510,12 @@ msgstr "Comprobador de color"
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:736
 msgid "Color Checker DC"
-msgstr ""
+msgstr "Comprobador de color DC"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:740
 msgid "Color Checker SG"
-msgstr ""
+msgstr "Comprobador de color SG"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:744
@@ -531,7 +530,7 @@ msgstr ""
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:752
 msgid "IT8.7/2"
-msgstr ""
+msgstr "IT8.7/2"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:756
@@ -541,13 +540,13 @@ msgstr ""
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:760
 msgid "QPcard 201"
-msgstr ""
+msgstr "QPcard 201"
 
 #. TRANSLATORS: this is the window title for when the user selects the chart type.
 #. A chart is a type of reference image the user has purchased.
 #: ../src/gcm-calibrate.c:835
 msgid "Please select chart type"
-msgstr ""
+msgstr "Seleccione el tipo de gráfico"
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate.c:838
@@ -557,14 +556,13 @@ msgstr ""
 #. TRANSLATORS: button, confirm the chart type
 #: ../src/gcm-calibrate.c:844
 msgid "Use this type"
-msgstr ""
+msgstr "Usar este tipo"
 
 #. TRANSLATORS: title, usually we can tell based on the EDID data or output name
 #: ../src/gcm-calibrate.c:915
-#, fuzzy
 #| msgid "Install ICC profiles"
 msgid "Install missing files?"
-msgstr "Instalar perfiles ICC"
+msgstr "¿Instalar los archivos faltantes?"
 
 #. TRANSLATORS: dialog message saying the color targets are not installed
 #: ../src/gcm-calibrate.c:918
@@ -580,12 +578,12 @@ msgstr ""
 #. TRANSLATORS: dialog message, asking if it's okay to install it
 #: ../src/gcm-calibrate.c:922 ../src/gcm-prefs.c:645
 msgid "Do you want them to be automatically installed?"
-msgstr ""
+msgstr "¿Quiere que se instalen automáticamente?"
 
 #. TRANSLATORS: dialog message, if the user has the target file on a CDROM then there's no need for this package
 #: ../src/gcm-calibrate.c:924
 msgid "If you already have the correct file, you can skip this step."
-msgstr ""
+msgstr "Puede omitir este paso si ya ha corregido el archivo."
 
 #. TRANSLATORS: button, install a package
 #. TRANSLATORS: button text
@@ -730,15 +728,14 @@ msgstr "Tamaño"
 
 #. TRANSLATORS: this is debugging output for the supplied EDID file
 #: ../src/gcm-dump-edid.c:109
-#, fuzzy
 #| msgid "Gamma:"
 msgid "Gamma"
-msgstr "Gamma:"
+msgstr "Gamma"
 
 #. TRANSLATORS: command line option: a list of files to parse
 #: ../src/gcm-dump-edid.c:144
 msgid "EDID dumps to parse"
-msgstr ""
+msgstr "Volcados EDID que analizar"
 
 #. TRANSLATORS: this is the filename we are displaying
 #: ../src/gcm-dump-edid.c:167
@@ -764,10 +761,9 @@ msgstr "Perfiles para ver"
 
 #. TRANSLATORS: this just dumps the profile to the screen
 #: ../src/gcm-dump-profile.c:126
-#, fuzzy
 #| msgid "ICC profile to install"
 msgid "ICC profile dump program"
-msgstr "Perfil ICC para instalar"
+msgstr "Programa para volcados de perfiles ICC"
 
 #. TRANSLATORS: this is the name of the internal panel
 #: ../src/gcm-device-xrandr.c:107
@@ -776,36 +772,32 @@ msgstr "LCD de portátil"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-fix-profile.c:78
-#, fuzzy
 #| msgid "Generating the profile"
 msgid "The description for the profile"
-msgstr "Generando el perfil"
+msgstr "La descripción para el perfil"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-fix-profile.c:81
-#, fuzzy
 #| msgid "Generating the profile"
 msgid "The copyright for the profile"
-msgstr "Generando el perfil"
+msgstr "El copyright para el perfil"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-fix-profile.c:84
-#, fuzzy
 #| msgid "Generating the profile"
 msgid "The model for the profile"
-msgstr "Generando el perfil"
+msgstr "El modelo para el perfil"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-fix-profile.c:87
 msgid "The manufacturer for the profile"
-msgstr ""
+msgstr "El fabricante para el perfil"
 
 #. TRANSLATORS: command line option: a list of icc files to fix
 #: ../src/gcm-fix-profile.c:90
-#, fuzzy
 #| msgid "Profiles to view"
 msgid "Profiles to fix"
-msgstr "Perfiles para ver"
+msgstr "Perfiles que arreglar"
 
 #. TRANSLATORS: this fixes broken profiles
 #: ../src/gcm-fix-profile.c:101
@@ -847,10 +839,9 @@ msgstr ""
 
 #. TRANSLATORS: error details
 #: ../src/gcm-install-system-wide.c:114
-#, fuzzy
 #| msgid "Failed to copy file"
 msgid "Failed to get content type"
-msgstr "Falló al copiar el archivo"
+msgstr "Falló al obtener el tipo de contenido"
 
 #. TRANSLATORS: the content type is the detected type of file
 #: ../src/gcm-install-system-wide.c:124
@@ -859,10 +850,9 @@ msgstr ""
 
 #. TRANSLATORS: error details
 #: ../src/gcm-install-system-wide.c:137
-#, fuzzy
 #| msgid "Failed to copy file"
 msgid "Failed to copy"
-msgstr "Falló al copiar el archivo"
+msgstr "Falló al copiar"
 
 #. TRANSLATORS: nothing was specified on the command line
 #: ../src/gcm-import.c:104
@@ -1013,12 +1003,12 @@ msgstr ""
 #. TRANSLATORS: just dumps the EDID to disk
 #: ../src/gcm-inspect.c:481
 msgid "EDID inspect program"
-msgstr ""
+msgstr "Programa de inspección EDID"
 
 #. TRANSLATORS: this is when the user does --type=mickeymouse
 #: ../src/gcm-inspect.c:498
 msgid "Device type not recognized"
-msgstr ""
+msgstr "No se reconoció el tipo de dispositivo"
 
 #. TRANSLATORS: this is where no profile is selected
 #: ../src/gcm-prefs.c:160
@@ -1042,11 +1032,13 @@ msgstr "¿Eliminar permanentemente el perfil?"
 msgid ""
 "Are you sure you want to remove this profile from your system permanently?"
 msgstr ""
+"¿Está seguro de que quiere eliminar permanentemente este perfil de su "
+"sistema?"
 
 #. TRANSLATORS: button, delete a profile
 #: ../src/gcm-prefs.c:417
 msgid "Delete"
-msgstr ""
+msgstr "Eliminar"
 
 #. TRANSLATORS: dialog for file->open dialog
 #: ../src/gcm-prefs.c:463
@@ -1114,77 +1106,76 @@ msgstr ""
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1237 ../src/gcm-prefs.c:1287
 msgid "Unknown"
-msgstr ""
+msgstr "Desconocido"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1248
 msgid "XYZ"
-msgstr ""
+msgstr "XYZ"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1252
 msgid "LAB"
-msgstr ""
+msgstr "LAB"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1256
 msgid "LUV"
-msgstr ""
+msgstr "LUV"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1260
 msgid "YCbCr"
-msgstr ""
+msgstr "YCbCr"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1264
 msgid "Yxy"
-msgstr ""
+msgstr "Yxy"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1268
 msgid "RGB"
-msgstr ""
+msgstr "RGB"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1272
 msgid "Gray"
-msgstr ""
+msgstr "Gris"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1276
 msgid "HSV"
-msgstr ""
+msgstr "HSV"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1280
 msgid "CMYK"
-msgstr ""
+msgstr "CMYK"
 
 #. TRANSLATORS: this the ICC colorspace type
 #: ../src/gcm-prefs.c:1284
 msgid "CMY"
-msgstr ""
+msgstr "CMY"
 
 #: ../src/gcm-prefs.c:1415
 msgid "Yes"
-msgstr ""
+msgstr "Sí"
 
 #: ../src/gcm-prefs.c:1417
-#, fuzzy
 #| msgid "None"
 msgid "No"
-msgstr "Ninguna"
+msgstr "No"
 
 #. TRANSLATORS: this is where an output is not settable, but we are showing it in the UI
 #: ../src/gcm-prefs.c:1566
 msgid "No hardware support"
-msgstr ""
+msgstr "Sin soporte hardware"
 
 #. TRANSLATORS: this is where the device has been setup but is not connected
 #: ../src/gcm-prefs.c:1570 ../src/gcm-prefs.c:1833
 msgid "disconnected"
-msgstr ""
+msgstr "desconectado"
 
 #. TRANSLATORS: this is when there are no profiles that can be used; the search term is either "RGB" or "CMYK"
 #: ../src/gcm-prefs.c:2040
@@ -1211,10 +1202,9 @@ msgstr "No activar corrección de pantalla"
 
 #. TRANSLATORS: this is where the ICC profile_lcms1 has no description
 #: ../src/gcm-profile.c:355
-#, fuzzy
 #| msgid "Description:"
 msgid "Missing description"
-msgstr "Descripción:"
+msgstr "Falta la descripción"
 
 #: ../src/gcm-session.c:124
 msgid "Do not exit after the request has been processed"
@@ -1222,16 +1212,14 @@ msgstr ""
 
 #. TRANSLATORS: program name, a session wide daemon to watch for updates and changing system state
 #: ../src/gcm-session.c:140
-#, fuzzy
 #| msgid "Color management"
 msgid "Color Management"
 msgstr "Gestión de color"
 
 #: ../src/gcm-session.c:142
-#, fuzzy
 #| msgid "Color management"
 msgid "Color Management DBus Service"
-msgstr "Gestión de color"
+msgstr "Servicio D-Bus de gestión de color"
 
 #. TRANSLATORS: this is the profile creation date strftime format
 #: ../src/gcm-utils.c:494
@@ -1250,10 +1238,9 @@ msgstr ""
 
 #. TRANSLATORS: rendering intent: you probably want to google this
 #: ../src/gcm-utils.c:515
-#, fuzzy
 #| msgid "Calibration"
 msgid "Saturation"
-msgstr "Calibración"
+msgstr "Saturación"
 
 #. TRANSLATORS: rendering intent: you probably want to google this
 #: ../src/gcm-utils.c:519
@@ -1262,7 +1249,7 @@ msgstr ""
 
 #: ../data/gcm-calibrate.ui.h:1
 msgid "Blue:"
-msgstr ""
+msgstr "Azul:"
 
 #: ../data/gcm-calibrate.ui.h:2 ../data/gcm-prefs.ui.h:2
 msgid "Brightness:"
@@ -1282,7 +1269,7 @@ msgstr "Pantalla"
 #. window title
 #: ../data/gcm-calibrate.ui.h:6
 msgid "Manual calibration wizard"
-msgstr ""
+msgstr "Asistente de calibración manual"
 
 #: ../data/gcm-calibrate.ui.h:7
 msgid "Red:"
