Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
 "POT-Creation-Date: 2010-02-18 10:53+0000\n"
-"PO-Revision-Date: 2010-02-18 14:33+0100\n"
+"PO-Revision-Date: 2010-02-18 14:55+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -265,10 +265,10 @@ msgstr "Detectando los parches de referencia y midiéndolos."
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate-argyll.c:1043
-#, fuzzy
 #| msgid "Generating the ICC color profile that can be used with this screen."
 msgid "Generating the ICC color profile that can be used with this device."
-msgstr "Generando el perfil de color ICC que se usará con esta pantalla."
+msgstr ""
+"Generando el perfil de color ICC que se podrá usar con este dispositivo."
 
 #. TRANSLATORS: title, hardware refers to a calibration device
 #: ../src/gcm-calibrate-argyll.c:1192
@@ -329,10 +329,9 @@ msgstr ""
 
 #. TRANSLATORS: title, device is a hardware color calibration sensor
 #: ../src/gcm-calibrate-argyll.c:1370
-#, fuzzy
 #| msgid "Please attach device"
 msgid "Please configure device"
-msgstr "Adjunte un dispositivo"
+msgstr "Configure el dispositivo"
 
 #. TRANSLATORS: this is when the user has to change a setting on the sensor, and we're showing a picture
 #: ../src/gcm-calibrate-argyll.c:1380
@@ -500,7 +499,7 @@ msgstr ""
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:728
 msgid "CMP DT 003"
-msgstr ""
+msgstr "CMP DT 003"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:732
@@ -552,6 +551,7 @@ msgstr "Seleccione el tipo de gráfico"
 #: ../src/gcm-calibrate.c:838
 msgid "Please select the chart type which corresponds to your reference file."
 msgstr ""
+"Seleccione el tipo de gráfico que corresponde con su archivo de referencia."
 
 #. TRANSLATORS: button, confirm the chart type
 #: ../src/gcm-calibrate.c:844
@@ -664,7 +664,7 @@ msgstr ""
 #: ../src/gcm-calibrate-manual.c:231
 #, c-format
 msgid "Create table item %i/%i"
-msgstr ""
+msgstr "Crear elemento de tabla %i/%i"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-calibrate-manual.c:252
@@ -685,6 +685,8 @@ msgid ""
 "This display is now calibrated. You can change the current profile using the "
 "Color Profiles program."
 msgstr ""
+"Ahora esta pantalla está calibrada. Puede cambiar el perfil actual usando el "
+"programa Perfiles de color."
 
 #. TRANSLATORS: this is when the EDID file cannot be read
 #: ../src/gcm-dump-edid.c:58
@@ -825,17 +827,17 @@ msgstr ""
 #. TRANSLATORS: user did not specify a valid filename
 #: ../src/gcm-install-system-wide.c:86
 msgid "You need to specify exactly one ICC profile filename"
-msgstr ""
+msgstr "Debe especificar exactamente un nombre de archivo de perfil ICC"
 
 #. TRANSLATORS: user did not specify a valid device ID
 #: ../src/gcm-install-system-wide.c:94
 msgid "You need to specify exactly one device ID"
-msgstr ""
+msgstr "Debe especificar exactamente un ID de dispositivo"
 
 #. TRANSLATORS: only able to install profiles as root
 #: ../src/gcm-install-system-wide.c:104
 msgid "This program can only be used by the root user"
-msgstr ""
+msgstr "Este programa sólo lo puede usar el superusuario"
 
 #. TRANSLATORS: error details
 #: ../src/gcm-install-system-wide.c:114
@@ -846,7 +848,7 @@ msgstr "Falló al obtener el tipo de contenido"
 #. TRANSLATORS: the content type is the detected type of file
 #: ../src/gcm-install-system-wide.c:124
 msgid "Content type was incorrect"
-msgstr ""
+msgstr "El tipo de contenido era incorrecto"
 
 #. TRANSLATORS: error details
 #: ../src/gcm-install-system-wide.c:137
@@ -925,7 +927,7 @@ msgstr "sin establecer"
 #: ../src/gcm-inspect.c:196 ../src/gcm-inspect.c:265 ../src/gcm-inspect.c:329
 #: ../src/gcm-inspect.c:422
 msgid "The request failed"
-msgstr ""
+msgstr "Falló la solicitud"
 
 #. TRANSLATORS: no rofile has been asigned to this device
 #: ../src/gcm-inspect.c:204
@@ -935,7 +937,7 @@ msgstr "No existen perfiles ICC para este dispositivo"
 #. TRANSLATORS: this is a list of profiles suitable for the device
 #: ../src/gcm-inspect.c:209 ../src/gcm-inspect.c:278 ../src/gcm-inspect.c:342
 msgid "Suitable profiles for:"
-msgstr ""
+msgstr "Perfiles apropiados para:"
 
 #. TRANSLATORS: no profile has been asigned to this window
 #: ../src/gcm-inspect.c:273
@@ -961,17 +963,15 @@ msgstr ""
 
 #. TRANSLATORS: this is filename of the default colorspace
 #: ../src/gcm-inspect.c:383
-#, fuzzy
 #| msgid "Colorspace:"
 msgid "RGB Colorspace:"
-msgstr "Espacio de color:"
+msgstr "Espacio de color RGB:"
 
 #. TRANSLATORS: this is filename of the default colorspace
 #: ../src/gcm-inspect.c:386
-#, fuzzy
 #| msgid "Colorspace:"
 msgid "CMYK Colorspace:"
-msgstr "Espacio de color:"
+msgstr "Espacio de color CMYK:"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:456
@@ -985,10 +985,9 @@ msgstr ""
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:462
-#, fuzzy
 #| msgid "_Create profile for device"
 msgid "Get the profile for a specific window"
-msgstr "_Crear perfil para el dispositivo"
+msgstr "Obtener el perfil para una ventana específica"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:465
