Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager\n"
 "POT-Creation-Date: 2010-02-18 10:53+0000\n"
-"PO-Revision-Date: 2010-02-18 14:55+0100\n"
+"PO-Revision-Date: 2010-02-18 18:26+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -494,7 +494,7 @@ msgstr "Valores CIE"
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:724
 msgid "CMP Digital Target 3"
-msgstr ""
+msgstr "CMP Digital Target 3"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:728
@@ -519,12 +519,12 @@ msgstr "Comprobador de color SG"
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:744
 msgid "Hutchcolor"
-msgstr ""
+msgstr "Hutchcolor"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:748
 msgid "i1 RGB Scan 1.4"
-msgstr ""
+msgstr "i1 RGB Scan 1.4"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:752
@@ -534,7 +534,7 @@ msgstr "IT8.7/2"
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:756
 msgid "Laser Soft DC Pro"
-msgstr ""
+msgstr "Laser Soft DC Pro"
 
 #. TRANSLATORS: this is probably a brand name
 #: ../src/gcm-calibrate.c:760
@@ -608,6 +608,8 @@ msgid ""
 "Before calibrating the device, you have to manually acquire a reference "
 "image and save it as a TIFF image file."
 msgstr ""
+"Antes de calibrar el dispositivo debe adquirir manualmente una imagen de "
+"referencia y guardarla como un archivo de imagen TIFF."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate.c:951
@@ -615,6 +617,8 @@ msgid ""
 "Ensure that the contrast and brightness is not changed and color correction "
 "profiles are not applied."
 msgstr ""
+"Asegúrese de que el contraste y brillo no se cambian y que no se aplican "
+"perfiles de corrección de color."
 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate.c:954
@@ -637,12 +641,12 @@ msgstr ""
 #. TRANSLATORS: button, confirm the user has a file
 #: ../src/gcm-calibrate.c:967
 msgid "I have already scanned in a file"
-msgstr ""
+msgstr "Ya lo tengo escaneado en un archivo"
 
 #. TRANSLATORS: dialog title
 #: ../src/gcm-calibrate-manual.c:196
 msgid "Introduction to display calibration"
-msgstr ""
+msgstr "Introducción a la calibración de pantallas"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-calibrate-manual.c:215
@@ -803,15 +807,14 @@ msgstr "Perfiles que arreglar"
 
 #. TRANSLATORS: this fixes broken profiles
 #: ../src/gcm-fix-profile.c:101
-#, fuzzy
 #| msgid "ICC profile installer"
 msgid "ICC profile fix program"
-msgstr "Instalador de perfiles ICC"
+msgstr "Programa para arreglar perfiles ICC"
 
 #. command line argument, the ID of the device
 #: ../src/gcm-install-system-wide.c:60
 msgid "Device ID, e.g. xrandr_ibm_france_ltn154p2_l05"
-msgstr ""
+msgstr "ID del dispositivo, ej: xrandr_ibm_france_ltn154p2_l05"
 
 #. TRANSLATORS: command line option: a list of files to install
 #. TRANSLATORS: command line option: a list of catalogs to install
@@ -911,7 +914,7 @@ msgstr "Copyright:"
 #. TRANSLATORS: the root window of all the screens
 #: ../src/gcm-inspect.c:110
 msgid "Root window profile (deprecated):"
-msgstr ""
+msgstr "Ventana raíz de perfil (obsoleto):"
 
 #: ../src/gcm-inspect.c:126
 #, c-format
@@ -941,10 +944,9 @@ msgstr "Perfiles apropiados para:"
 
 #. TRANSLATORS: no profile has been asigned to this window
 #: ../src/gcm-inspect.c:273
-#, fuzzy
 #| msgid "There are no ICC profiles for this device"
 msgid "There are no ICC profiles for this window"
-msgstr "No existen perfiles ICC para este dispositivo"
+msgstr "No existen perfiles ICC para esta ventana"
 
 #. TRANSLATORS: no rofile has been asigned to this device type
 #: ../src/gcm-inspect.c:337
@@ -954,12 +956,12 @@ msgstr "No existen perfiles ICC para este tipo de dispositivo"
 #. TRANSLATORS: this is the rendering intent of the output
 #: ../src/gcm-inspect.c:377
 msgid "Rendering intent (display):"
-msgstr ""
+msgstr "Intento de renderizado (pantalla):"
 
 #. TRANSLATORS: this is the rendering intent of the printer
 #: ../src/gcm-inspect.c:380
 msgid "Rendering intent (softproof):"
-msgstr ""
+msgstr "Intento de renderizado (prueba suave):"
 
 #. TRANSLATORS: this is filename of the default colorspace
 #: ../src/gcm-inspect.c:383
@@ -981,7 +983,7 @@ msgstr "Mostrar las propiedades de X11"
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:459
 msgid "Get the profiles for a specific device"
-msgstr ""
+msgstr "Obtener los perfiles para un dispositivo específico"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:462
@@ -992,12 +994,12 @@ msgstr "Obtener el perfil para una ventana específica"
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:465
 msgid "Get the profiles for a specific device type"
-msgstr ""
+msgstr "Obtener los perfiles para un tipo de dispositivo específico"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:468
 msgid "Dump all details about this system"
-msgstr ""
+msgstr "Volcar todos los detalles acerca de este sistema"
 
 #. TRANSLATORS: just dumps the EDID to disk
 #: ../src/gcm-inspect.c:481
@@ -1016,10 +1018,9 @@ msgstr "Ninguna"
 
 #. TRANSLATORS: this is where the user can click and import a profile
 #: ../src/gcm-prefs.c:163
-#, fuzzy
 #| msgid "Delete profile"
 msgid "Other profile..."
-msgstr "Eliminar perfil"
+msgstr "Otro perfil..."
 
 #. TRANSLATORS: title, usually we can tell based on the EDID data or output name
 #: ../src/gcm-prefs.c:411
@@ -1046,40 +1047,41 @@ msgstr "Seleccionar archivo de perfil ICC"
 
 #. TRANSLATORS: filter name on the file->open dialog
 #: ../src/gcm-prefs.c:484
-#, fuzzy
 #| msgid "Import ICC profile"
 msgid "Supported ICC profiles"
-msgstr "Importar perfil ICC"
+msgstr "Perfiles ICC soportados"
 
 #. TRANSLATORS: title, usually we can tell based on the EDID data or output name
 #: ../src/gcm-prefs.c:637
 msgid "Install missing calibration software?"
-msgstr ""
+msgstr "¿Instalar software de calibración que falta?"
 
 #. TRANSLATORS: dialog message saying the argyllcms is not installed
 #: ../src/gcm-prefs.c:641
 msgid "Calibration software is not installed on this computer."
-msgstr ""
+msgstr "El software de calibración no está instalado en este equipo."
 
 #. TRANSLATORS: dialog message saying the color targets are not installed
 #: ../src/gcm-prefs.c:643
 msgid "These tools are required to build color profiles for devices."
 msgstr ""
+"Se requieren estas herramientas para construir perfiles de color para "
+"dispositivos."
 
 #. TRANSLATORS: this the ICC profile type
 #: ../src/gcm-prefs.c:1210
 msgid "Input device"
-msgstr ""
+msgstr "Dispositivo de entrada"
 
 #. TRANSLATORS: this the ICC profile type
 #: ../src/gcm-prefs.c:1214
 msgid "Display device"
-msgstr ""
+msgstr "Dispositivo de pantalla"
 
 #. TRANSLATORS: this the ICC profile type
 #: ../src/gcm-prefs.c:1218
 msgid "Output device"
-msgstr ""
+msgstr "Dispositivo de salida"
 
 #. TRANSLATORS: this the ICC profile type
 #: ../src/gcm-prefs.c:1222
@@ -1089,7 +1091,7 @@ msgstr ""
 #. TRANSLATORS: this the ICC profile type
 #: ../src/gcm-prefs.c:1226
 msgid "Colorspace conversion"
-msgstr ""
+msgstr "Conversión del espacio de color"
 
 #. TRANSLATORS: this the ICC profile type
 #: ../src/gcm-prefs.c:1230
@@ -1180,7 +1182,7 @@ msgstr "desconectado"
 #: ../src/gcm-prefs.c:2040
 #, c-format
 msgid "No %s color spaces available"
-msgstr ""
+msgstr "No existen espacios de color %s disponibles"
 
 #. TRANSLATORS: we can make this modal (stay on top of) another window
 #: ../src/gcm-prefs.c:2387
@@ -1190,14 +1192,13 @@ msgstr "Establecer la ventana padre para hacerlo modal"
 #. TRANSLATORS: this is displayed while the devices are being probed
 #: ../src/gcm-prefs.c:2648
 msgid "Loading list of devices..."
-msgstr ""
+msgstr "Cargando la lista de dispositivos…"
 
 #. TRANSLATORS: this is displayed when the profile is crap
 #: ../src/gcm-prefs.c:2655
-#, fuzzy
 #| msgid "Do not enable display correction"
 msgid "Profile does not contain display correction information..."
-msgstr "No activar corrección de pantalla"
+msgstr "El perfil no contiene información de corrección de la pantalla…"
 
 #. TRANSLATORS: this is where the ICC profile_lcms1 has no description
 #: ../src/gcm-profile.c:355
@@ -1207,7 +1208,7 @@ msgstr "Falta la descripción"
 
 #: ../src/gcm-session.c:124
 msgid "Do not exit after the request has been processed"
-msgstr ""
+msgstr "No salir después de que se haya procesado la solicitud"
 
 #. TRANSLATORS: program name, a session wide daemon to watch for updates and changing system state
 #: ../src/gcm-session.c:140
